--- a/homework.html
+++ b/homework.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <header>
-        <a href="https://www.shecodes.io">👩🏾‍💻</a>
+        <a href="https://www.shecodes.io" target="_blank">👩🏾‍💻 Visit SheCodes</a>
         <h1>Weather</h1>
         <form>
           <input type="text" id="locationInput" placeholder="Enter a city" />
@@ -51,15 +51,16 @@
           </ul>
         </div>
       </section>
+
       <footer>
         This project was coded by
-        <a
-          class="footerlink"
-          href="https://www.shecodes.io/graduates/158174-monica-privett"
-        >
-          Monica Privett</a
-        >
-        and is open sourced on GitHub
+        <a class="footerlink" href="https://www.shecodes.io/graduates/158174-monica-privett" target="_blank">
+          Monica Privett
+        </a>
+        and is open-sourced on
+        <a class="footerlink" href="https://github.com/SteppingStoneCake/SheCodes" target="_blank">
+          GitHub
+        </a>.
       </footer>
     </div>
   </body>
